--- a/Client/Marketing/web3laliberte.heroview/src/views/CSS/Contact.css
+++ b/Client/Marketing/web3laliberte.heroview/src/views/CSS/Contact.css
@@ -177,12 +177,65 @@ button.btn-submit:hover {
 
 @media (max-width: 768px) {
     .contact-left {
+
         margin-bottom: 10px;
     }
 
     .contact-container {
-        height: 450px !important;
+        height: 500px !important;
         overflow-y: scroll;
         overflow-x: hidden;
     }
+    
+    .contact-wrapper {
+        padding: 10px;
+    }
+    
+
+    .contact-right {
+
+        padding: 10px;
+    }
+
+    .email-wrapper {
+
+        padding: 10px;
+    }
+
+    form {
+        padding: 0 10px 0 10px;
+    }
+
+    button.btn-submit {
+        padding: 8px 16px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 576px) {
+    .contact-wrapper {
+        padding: 15px;
+    }
+
+    .contact-left h3 {
+        font-size: 30px;
+    }
+
+    .contact-left h4 {
+        font-size: 16px;
+    }
+
+    .contact-right {
+        padding: 5px;
+    }
+
+    .email-wrapper {
+        padding: 5px;
+    }
+
+    form {
+        padding: 0 5px 0 5px;
+    }
+
+
 }
