--- a/Client/Office/web3laliberte.adminportal/src/components/layout/CSS/NavTop.css
+++ b/Client/Office/web3laliberte.adminportal/src/components/layout/CSS/NavTop.css
@@ -50,6 +50,7 @@ i#normal {
     border: none;
     font-size: 20px;
     background-color: transparent;
+    margin-right: 0;
 }
 
 .menu {
@@ -89,12 +90,10 @@ i#normal {
 .menu-list a.active {
     color: var(--first-color) !important;
     font-style: italic;
-    text-decoration: line-through;
     border-bottom: none;
 }
 
 .menu-list a:hover {
-    text-decoration: line-through;
     font-style: italic;
     color: var(--second-color);
 }
@@ -104,11 +103,62 @@ i#normal {
         display: none !important;
     }
 
+    .navtop-brand h6 {
+        display: none;
+    }
+
     .toggle-menu {
-        display: flex;
+        display: inline-block;
     }
 
     .menu {
         display: flex;
+    }
+    
+}
+
+@media (max-width: 768px) {
+    .navtop {
+        padding: 10px;
+    }
+
+    .navtop-brand a {
+        font-size: 24px !important;
+    }
+
+    .navtop-icon {
+        font-size: 20px;
+    }
+
+    .toggle-menu {
+        font-size: 18px;
+    }
+
+    .menu-list a {
+        font-size: 20px;
+        margin: 20px 0;
+    }
+}
+
+@media (max-width: 576px) {
+    .navtop {
+        padding: 5px;
+    }
+
+    .navtop-brand a {
+        font-size: 18px !important;
+    }
+
+    .navtop-icon {
+        font-size: 18px;
+    }
+
+    .toggle-menu {
+        font-size: 16px;
+    }
+
+    .menu-list a {
+        font-size: 18px;
+        margin: 15px 0;
     }
 }
